# GSL

cmake/: compile_fail.cmake
tests/: CMakeLists.txt  span_tests.cpp  string_span_tests.cpp
tests/compile_tests/: dummy.cpp  span.cpp
